<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Agregar_Mate"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_agregar_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/title_add_mat"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_add_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/titulo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_agregar_material" />

    <EditText
        android:id="@+id/add_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="8"
        android:hint="Titulo del material"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toEndOf="@+id/text_add_titulo"
        app:layout_constraintTop_toBottomOf="@+id/title_agregar_material" />

    <TextView
        android:id="@+id/text_add_autores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/autor"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/add_autores"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_add_titulo" />

    <EditText
        android:id="@+id/add_autores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:ems="8"
        android:hint="Nombre del autor"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_titulo" />

    <EditText
        android:id="@+id/add_cantidad"
        android:layout_width="79dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="212dp"
        android:ems="8"
        android:hint="Cantidad"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_autores" />

    <EditText
        android:id="@+id/add_año"
        android:layout_width="69dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:ems="8"
        android:hint="Año"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_autores" />

    <TextView
        android:id="@+id/text_add_coleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/coleccion"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/add_coleccion"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_add_cant" />

    <TextView
        android:id="@+id/add_coleccion"
        android:layout_width="177dp"
        android:layout_height="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:hint="@string/hint_campo_text"
        android:text=" General"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_año" />

    <TextView
        android:id="@+id/text_add_idioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/idioma"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_add_coleccion" />

    <TextView
        android:id="@+id/text_add_tipo_mat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/tipo_mat"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_add_idioma" />

    <TextView
        android:id="@+id/text_add_biblioteca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/biblioteca"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_add_tipo_mat" />

    <EditText
        android:id="@+id/add_idioma"
        android:layout_width="177dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="8"
        android:hint="Idioma"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toEndOf="@+id/text_add_idioma"
        app:layout_constraintTop_toBottomOf="@+id/add_coleccion" />

    <EditText
        android:id="@+id/add_tipo_mat"
        android:layout_width="174dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:ems="8"
        android:hint="Tipo de material"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toEndOf="@+id/text_add_tipo_mat"
        app:layout_constraintTop_toBottomOf="@+id/add_idioma" />

    <TextView
        android:id="@+id/add_biblioteca"
        android:layout_width="152dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_campo_text"
        android:text=" Carlos Monge"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toEndOf="@+id/text_add_biblioteca"
        app:layout_constraintTop_toBottomOf="@+id/add_tipo_mat" />

    <Button
        android:id="@+id/btn_add_material"
        android:layout_width="246dp"
        android:layout_height="47dp"
        android:text="@string/btn_agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_biblioteca"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/text_add_cant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/cant"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/add_cantidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_add_autores" />

    <TextView
        android:id="@+id/text_add_año"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Año"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/add_año"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toEndOf="@+id/add_cantidad"
        app:layout_constraintTop_toBottomOf="@+id/add_autores" />

</androidx.constraintlayout.widget.ConstraintLayout>