<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/formulario_agregar"
        android:title="Agregar Material"
        android:visible="true"/>
    <item
        android:id="@+id/buscar_usuario"
        android:title="Eliminar reserva"
        android:visible="true" />
</menu>